# Cluster_Comparison

./: .gitignore  atlas_of_behaviors.py  atlas_of_behaviors_reprise.py  cluster_sim_by_week.py  cluster_successor_diversity.py  cluster_transition_compare.py  cluster_transition_labels.py  dataset_config.py  feature_extraction.py  main.py  output.md  pyproject.toml  split_half_occupancy.py  utils.py  within_mouse_drift.py  wt_collection.py
arena_analysis/: arena_analysis_main.py  arena_class_split.py  arena_divergence_stats.py  arena_occupancy_drift.py  arena_successor_diversity_by_class.py  arena_tba_by_week.py  arena_tba_vulnerability.py  arena_transition_tba.py  arena_transitions.py  arena_transitions_by_clustertype.py  build_feature_table.py  build_frame_table.py  cluster_arena_degeneration.py  cluster_arena_exclusivity.py  plot_feature_contraction_lines.py  plot_stitched_weeks.py  plot_tba_combined_lines.py  temporal_arena_frequency.py
centroid_analysis/: cluster_spatial_map.py  collect_centroids.py  weekly_spatial_analysis.py
cluster_annotation_analysis/: build_sim_distance.py  presence_heatmap.py  transition_category_lines.py  transition_flow.py  transition_immobile_regression.py  transition_makeup_periods.py  transition_pair_coupling.py  transition_weekly.py
cluster_annotations/: 1mp.json
cluster_group_analysis/: branch_analysis.py  build_cluster_table.py  common.py  dendrogram.py  lc_low_tba_analysis.py  week_dendrogram.py
degeneracy_analysis/: degeneracy_analysis_main.py  evolution_commonalities.py  feature_similarity.py  feature_time_map.py  (+4 more)
(+26 files in other folders)
