[project]
name = "cluster-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mat73>=0.65",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
